Comming the changes performed by AC under feature/ACREPO-automation