@@ -1,21 +1,25 @@
 package gov.gsa.acr.cataloganalysis.service;
 
 import gov.gsa.acr.cataloganalysis.model.XsbData;
+import gov.gsa.acr.cataloganalysis.util.AcrXsbFilesUtil;
 import lombok.Getter;
+import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
+import reactor.core.publisher.Flux;
 
 import java.io.BufferedWriter;
+import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.Writer;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Stream;
 
 @Service
 @Slf4j
@@ -60,13 +64,14 @@ public class ErrorHandler {
 
     }
 
-
-
-
     @Value("${error.file.size.max.bytes.per.file}")
     private long maxErrorFileSizeBytes;
     @Value("${error.file.directory}")
+    @Getter
     private String errorDirectory;
+
+    @Value("${error.threshold}")
+    private Integer errorThreshold;
 
     private BoundedPrintWriter errorMsgWriter;
     private BoundedPrintWriter parseErrorWriter;
@@ -75,6 +80,10 @@ public class ErrorHandler {
     private int parseErrorChunk;
     private int dbErrorChunk;
     private String timeStamp;
+
+    @Getter
+    @Setter
+    private String header;
     private final String ls = System.getProperty("line.separator");
     @Getter
     private AtomicInteger numParsingErrors;
@@ -83,7 +92,27 @@ public class ErrorHandler {
     @Getter
     private AtomicInteger numFileErrors;
 
-    public void init(){
+    @Getter
+    @Setter
+    private AtomicInteger numRecordsSavedInTempDB;
+
+    private void deleteOldErrorFiles(){
+        try (Stream<Path> stream = Files.list(Path.of(errorDirectory)).filter(Files::isRegularFile).filter(p->p.getFileName().toString().matches(AcrXsbFilesUtil.globToRegex("xsb_error_*")))) {
+            stream.forEach(p -> {
+                try {
+                    Files.deleteIfExists(p);
+                } catch (IOException e) {
+                   log.error("Unable to delete error file: " + p, e);
+                }
+            });
+        }
+        catch (IOException e){
+            log.error("Unable to delete error files.", e);
+        }
+
+    }
+
+    public void init(String header){
         numParsingErrors = new AtomicInteger(0);
         numDbErrors = new AtomicInteger(0);
         numFileErrors = new AtomicInteger(0);
@@ -92,7 +121,9 @@ public class ErrorHandler {
         errorMsgWriter = null;
         parseErrorWriter = null;
         dbErrorWriter = null;
+        this.header = header;
         timeStamp = new SimpleDateFormat("yyyyMMdd").format(new Date());
+        deleteOldErrorFiles();
     }
 
     public void close(){
@@ -110,6 +141,15 @@ public class ErrorHandler {
         }
     }
 
+    public Flux<Path> getErrorFiles(){
+        return Flux.using(
+                () ->  Files.list(Path.of(errorDirectory)).filter(Files::isRegularFile).filter(p->p.getFileName().toString().matches(AcrXsbFilesUtil.globToRegex("xsb_error_*_"+timeStamp+"_*"))),
+                Flux::fromStream,
+                Stream::close
+        );
+    }
+
+
     public void handleParsingError(String xsbRecord, String srcFileName, String error){
         handleError(xsbRecord, srcFileName, error, "PARSE");
     }
@@ -126,31 +166,30 @@ public class ErrorHandler {
         boolean tryAgain = false;
         try {
             if (errorMsgWriter == null) {
-                Path opPath = Paths.get(getErrorMessageFileName());
+                Path opPath = Path.of(getErrorMessageFileName());
                 BufferedWriter bw = Files.newBufferedWriter(opPath, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
                 errorMsgWriter = new BoundedPrintWriter(bw, maxErrorFileSizeBytes);
             }
             if (errorType.equals("DB") && dbErrorWriter == null) {
-                Path opPath = Paths.get(getDBErrorFileName());
+                Path opPath = Path.of(getDBErrorFileName());
                 BufferedWriter bw = Files.newBufferedWriter(opPath, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
                 dbErrorWriter = new BoundedPrintWriter(bw, maxErrorFileSizeBytes);
+                if (header == null || header.isBlank()) log.error("Error initializing the errorHandler. Header string is null");
+                else dbErrorWriter.println(header);
             }
             else if (errorType.equals("PARSE") && parseErrorWriter == null) {
-                Path opPath = Paths.get(getParseErrorFileName());
+                Path opPath = Path.of(getParseErrorFileName());
                 BufferedWriter bw = Files.newBufferedWriter(opPath, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
                 parseErrorWriter = new BoundedPrintWriter(bw, maxErrorFileSizeBytes);
+                if (header == null || header.isBlank()) log.error("Error initializing the errorHandler. Header string is null");
+                else parseErrorWriter.println(header);
             }
 
             StringBuilder sb = new StringBuilder();
-            sb.append(xsbRecord)
-                    .append(ls)
-                    .append("Source File: ")
-                    .append(srcFileName)
-                    .append(ls)
-                    .append("Error (s):")
-                    .append(ls)
-                    .append(error)
-                    .append(ls)
+            sb.append(xsbRecord).append(ls)
+                    .append("Source File: ").append(srcFileName).append(ls)
+                    .append("Error (s):").append(ls)
+                    .append(error).append(ls)
                     .append("------------------------------");
 
             // Check if this file has reached its max limit, if so then the number of allowed bytes will be zero.
@@ -205,7 +244,9 @@ public class ErrorHandler {
 
     }
 
-
+    public Boolean proceedToMoveDataFromStagingToFinal(){
+        return (numRecordsSavedInTempDB.get() > 0) && ((numDbErrors.get() + numParsingErrors.get()) < errorThreshold);
+    }
 
 
     private String getErrorMessageFileName(){
@@ -215,12 +256,12 @@ public class ErrorHandler {
 
     private String getParseErrorFileName(){
         String parseErrorSuffix = ".gsa";
-        return errorDirectory + "/xsb_parse_error_" + timeStamp + "_" + parseErrorChunk++ + parseErrorSuffix;
+        return errorDirectory + "/xsb_error_parse_" + timeStamp + "_" + parseErrorChunk++ + parseErrorSuffix;
     }
 
     private String getDBErrorFileName(){
         String dbErrorSuffix = ".gsa";
-        return errorDirectory + "/xsb_db_error_" + timeStamp + "_" + dbErrorChunk++ + dbErrorSuffix;
+        return errorDirectory + "/xsb_error_db_" + timeStamp + "_" + dbErrorChunk++ + dbErrorSuffix;
     }
 
 }
